RESOLVED FIXED271489
New exception handler adoption with fallback
https://bugs.webkit.org/show_bug.cgi?id=271489
Summary New exception handler adoption with fallback
Keith Miller
Reported 2024-03-22 14:24:26 PDT
Now with fallback for old sandbox profiles
Attachments
Keith Miller
Comment 1 2024-03-22 14:24:35 PDT
Keith Miller
Comment 2 2024-03-22 14:32:00 PDT
EWS
Comment 3 2024-03-22 16:50:21 PDT
Committed 276579@main (66f743ca6ca6): <https://commits.webkit.org/276579@main> Reviewed commits have been landed. Closing PR #26339 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.